2020-09-15  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/time.pk: New file.
	(ptime): Move from std.pk.
	(POSIX_Time32): Likewise.
	(POSIX_Time64): Likewise.
	* pickles/Makefile.am (dist_pickles_DATA): Add time.pk.
	* testsuite/poke.time/time32.pk: Moved from poke.std.
	* testsuite/poke.time/time.exp: New file.
	* testsuite/Makefile.am (EXTRA_DIST): Reflect change of opsition
	of time32.pk
	* doc/poke.texi (Time): New chapter.

2020-09-15  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.c (struct pk_compiler): New field complete_type.
	(pk_compiler_new): Initialize complete_type.
	(complete_struct): Use complete_type.

2020-09-06  Kostas Chasialis  <sdi1600195@di.uoa.gr>

	* testsuite/poke.libpoke/values.c: Now all tests run with make check.
	* testsuite/poke.libpoke/Makefile.am: Added TESTDIR and LTLIBTEXTSTYLE
	for this purpose.

2020-09-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.c (rest_of_compilation): Revert fold and trans4 in
	the middleend pass.

2020-09-04  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_do_pass): Get a new argument `level'.
	(pkl_do_subpass): Likewise.
	(pkl_do_pass_1): Likewise.
	(pkl_call_node_handlers): Likewise.
	(PKL_PASS_CHAIN): Pass the new argument.
	(PKL_PASS): Likewise.
	(PKL_CALL_PHASES_SINGLE): Likewise.
	* libpoke/pkl.c (rest_of_compilation): Set pass levels.
	* libpoke/pkl-ast.h: Update comment on COMPILED.
	* libpoke/pkl-anal.c (pkl_anal_pr_type): Remove handler.
	(pkl_phase_anal1): Likewise.
	(pkl_phase_anal2): Likewise.
	(pkl_anal_ps_type): Likewise.
	(pkl_phase_analf): Likewise.
	* libpoke/pkl-trans.c (pkl_trans_pr_type): Likewise.
	(pkl_phase_trans1): Likewise.
	(pkl_phase_trans2): Likewise.
	(pkl_phase_trans3): Likewise.
	(pkl_phase_trans4): Likewise.
	* libpoke/pkl-promo.c (pkl_promo_pr_type): Likewise.
	(pkl_phase_promo): Likewise.
	* libpoke/pkl-fold.c (pkl_fold_pr_type): Likewise.
	(pkl_phase_fold): Likewise.
	* libpoke/pkl-typify.c (pkl_typify_pr_type): Likewise.